refactor: response empty list
