# docs/swagger.yaml
@@ -64,10 +64,6 @@ paths:
           description: Invalid Order IDs
           schema:
             $ref: '#/definitions/util.GeneralError'
-        "404":
-          description: Membership events not found
-          schema:
-            $ref: '#/definitions/util.GeneralError'
         "500":
           description: Internal server error
           schema:
